Fix a flaky test